Revision history for Perl extension DTL::Fast.

1.605 - Wed 28 Jan 2015 18:27 MSK
	- Fixed spaces between equals in 'with' tag. Now tags may be multiline	

1.604 - Tue 27 Jan 2015 20:18 MSK
	- Fixed bug when expression fails if variable name contains operator
	- Load tag is now accepts package names with or without quotes

1.602 - Sun 25 Jan 2015 20:18 MSK
	- Implemented and tested include .. with tag

1.05.6 - 2015-01-22
	- Removed changes from pod documentation
	- Fixed lvalue test for perl 5.10

1.05.5 - 2015-01-21
    - Changes file cleanup
    - Added filter numberformat, formats number like 12 345 678.9999999
    - Added DTL::Fast::Utils::is_lvalue method to check if method is lvalue. 
      Lvalue methods in context being invoked without context argument.
    - Fixed bugs with spaces in variables and filters

1.05.4 - 2015-01-20
    - Unknown block warning now displays template filename
    - Spaces in control blocks are not mandatory

1.05.3 - 2015-01-20
    - Context trying to traverse objects like hash if there is no method

1.05.2 - 2015-01-19
    - Fixed bug in C spaceless implementation for linux
    - Moved inheritance part into Template constructor
    - Fixed bug with inheritance + blocks extension
    - Fixed bug with logic on arrays/hashes/scalars reference, object method 
      as_bool support added. Tested.
    - Fixed bug with setting value to undef using DTL::Fast::Context::set
    - Fixed bug with inheritance path.
    - Implemented cache validation. Speed now is comparable to Dotiac::DTL
    - Made dirs parameter optional for Template constructor, but it's still 
      mandatory for get_template/select_template
    - Implemented cache classes: 
    
        DTL::Fast::Cache
        DTL::Fast::Cache::Runtime
        DTL::Fast::Cache::Serialized
        DTL::Fast::Cache::Compressed
        DTL::Fast::Cache::File
        DTL::Fast::Cache::Memcached

    - New dependencies added: Compress::Zlib, Digest::MD5