@@ -1,7 +1,9 @@
 Revision history for Perl extension DTL::Fast.
 
 1.605 - Wed 28 Jan 2015 18:27 MSK
-	- Fixed spaces between equals in 'with' tag. Now tags may be multiline	
+	- Fixed spaces between equals in 'with' tag. Now tags may be multiline, fixes #7
+	- Fixed filters behavior in with tag, if constant strings being used in assignment, fixes #8
+	- Blocks now can be multi-line
 
 1.604 - Tue 27 Jan 2015 20:18 MSK
 	- Fixed bug when expression fails if variable name contains operator
